...
import apiService from '../services/api.service';
import cometChatService from '../services/cometchat.service';
import { ExploreIcon, UpcomingIcon, BubblesIcon, MessagesIcon, ProfileIcon } from '../components/icons';
import unreadEvents from '../utils/unreadEvents';

export type MainTabParamList = {
  Explore: undefined;
  Upcoming: undefined;
  MyBubbles: undefined;
  Messages: undefined;
  Profile: undefined;
};

...
