...
          <View style={styles.placeholder} />
        </View>

        <View style={styles.searchContainer}>
          <GooglePlacesAutocomplete
            ref={ref}
            placeholder="Search for a place..."
            fetchDetails={true}
            onPress={handleSelect}
            requestUrl={{
              useOnPlatform: 'all',
              url: API_URL,
            }}
...
